# odo

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CNAME  README.md  ast_translating.py  index.html  specs.ebnf
css/: app.64fe03b0.css
examples/: class_test.odo  control_flow.odo  escape_sequence.odo  fibonacci.odo  foreach_test.odo  hangman.odo  inheritanceTest.odo  list_and_strings.odo  math.odo  reverse_string.odo  scratchpad.odo  simple_function_test.odo  simple_module.odo  syntax_error_test.odo  tictactoe.odo  tokenizer.odo  traceback_test.odo
examples/math/: mandelbrot.odo  secante.odo
examples/matrix/: matrix_utils.odo  maze_generator.odo  simple_matrix.odo
examples/meta_languages/: bf.odo  tokenizer.odo
include/: main.hpp  utils.h
include/Exceptions/: exception.h
include/IO/: io.h
include/Interpreter/: Interpreter.h  frame.h  symbol.h  value.h
include/Lexer/: lexer.hpp  token.hpp
include/Modules/: IOModule.h  MathModule.h  NativeModule.h  TermColorsModule.h  TermModule.h
include/Parser/: AST.h  parser.h
include/Parser/AST/: AssignmentNode.h  BinOpNode.h  BlockNode.h  BoolNode.h  BreakNode.h  ClassBodyNode.h  ClassInitializerNode.h  ClassNode.h  ConstructorCallNode.h  ConstructorDeclNode.h  ContinueNode.h  DebugNode.h  DefineNode.h  DoubleNode.h  EnumNode.h  FoRangeNode.h  ForEachNode.h  ForNode.h  Forward.h  FuncBodyNode.h  FuncCallNode.h  FuncDeclNode.h  FuncExpressionNode.h  IfNode.h  ImportNode.h  IndexNode.h  InstanceBodyNode.h  IntNode.h  ListDeclarationNode.h  ListExpressionNode.h  LoopNode.h  MemberVarNode.h  ModuleNode.h  NoOpNode.h  Node.h  NullNode.h  ReturnNode.h  StaticStatementNode.h  StaticVarNode.h  StrNode.h  (+5 more)
include/SemAnalyzer/: NodeResult.h  SemanticAnalyzer.h
include/Translations/: Interpreter_en.h  Interpreter_es.h  Modules_en.h  Modules_es.h  SemanticAnalyzer_en.h  SemanticAnalyzer_es.h  exception_en.h  exception_es.h  lang.h  lexer_en.h  lexer_es.h  main_en.h  main_es.h  parser_en.h  parser_es.h  symbol_en.h  symbol_es.h  value_en.h  value_es.h
js/: app.9552f60a.js  app.9552f60a.js.map  chunk-vendors.31722f91.js  chunk-vendors.31722f91.js.map
src/: main.cpp  utils.cpp
src/Exceptions/: exception.cpp
src/IO/: io.cpp
src/Interpreter/: Interpreter.cpp  symbol.cpp  value.cpp
src/Lexer/: lexer.cpp  token.cpp
src/Modules/: IOModule.cpp  NativeModule.cpp
src/Parser/: AST.cpp  parser.cpp
src/Parser/AST/: AssignmentNode.cpp  BinOpNode.cpp  BlockNode.cpp  BoolNode.cpp  ClassBodyNode.cpp  ClassInitializerNode.cpp  ClassNode.cpp  ConstructorCallNode.cpp  ConstructorDeclNode.cpp  DefineNode.cpp  DoubleNode.cpp  EnumNode.cpp  FoRangeNode.cpp  ForEachNode.cpp  ForNode.cpp  FuncBodyNode.cpp  FuncCallNode.cpp  FuncDeclNode.cpp  FuncExpressionNode.cpp  IfNode.cpp  ImportNode.cpp  IndexNode.cpp  InstanceBodyNode.cpp  IntNode.cpp  ListDeclarationNode.cpp  ListExpressionNode.cpp  LoopNode.cpp  MemberVarNode.cpp  ModuleNode.cpp  Node.cpp  ReturnNode.cpp  StaticStatementNode.cpp  StaticVarNode.cpp  StrNode.cpp  TernaryOpNode.cpp  UnaryOpNode.cpp  VarDeclarationNode.cpp  VariableNode.cpp  WhileNode.cpp
src/SemAnalyzer/: SemanticAnalyzer.cpp
tests/: odo_tests.py
tests/basic_types_m/: function_calls.todo  function_declaration.todo  list_declaration.todo  list_inference.todo  matrix_declaration.todo  variable_declaration.todo
tests/basic_types_m/variable_errors_m/: init_incompatible_int_bool_error.todo  init_incompatible_int_string_error.todo  type_unknown_error.todo
tests/lexing_m/: character_validity.todo
